--- a/app_server/views/layout.pug
+++ b/app_server/views/layout.pug
@@ -4,6 +4,7 @@ html
     meta(http-equiv="Content-Type", content="text/html;charset=UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title= title
+    link(rel="shortcut icon", href="favicon.png", type="image/png")
     link(rel="stylesheet", href="bootstrap/css/bootstrap.min.css")
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
