--- a/app_server/views/layout.pug
+++ b/app_server/views/layout.pug
@@ -6,6 +6,7 @@ html
     title= title
     link(rel="shortcut icon", href="/favicon.png", type="image/png")
     link(rel="stylesheet", href="/bootstrap/css/bootstrap.min.css")
+    link(rel="stylesheet", href="/stylesheets/fontawesome-all.min.css")
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     nav.navbar.fixed-top.navbar-expand-lg.navbar-light.bg-light
