location info: benefits, hours, map

--- a/app_server/views/locations-list.pug
+++ b/app_server/views/locations-list.pug
@@ -8,13 +8,13 @@ block content
         p.lead Find places to work with wi-fi near you!
   .row
     .col-12.col-lg-8
-      p List area.
+      h3 Let's visit one from this list?
       .row.list-group
         .col-12.list-group-item
-          include includes/locations-list-group-item.pug
+          include includes/locations-list-group-item
         .col-12.list-group-item
-          include includes/locations-list-group-item.pug
+          include includes/locations-list-group-item
         .col-12.list-group-item
-          include includes/locations-list-group-item.pug
+          include includes/locations-list-group-item
     .col-12.col-lg-4
       p.lead Loc8r helps you find places to work when out and about. Perhaps with coffee, cake or a pint? Let Loc8r help you find the place you're looking for
