customer reviews page

--- a/app_server/views/location-info.pug
+++ b/app_server/views/location-info.pug
@@ -11,5 +11,11 @@ block content
           include includes/location-info-item/benefits
         .col-12.col-sm-6.location-map
           include includes/location-info-item/map
+      .row.mb-3
+        .col-12
+          include includes/location-info-item/reviews-group
+    .col-12.col-md-3
+      p.lead Simon's cafe is on Loc8r! There are accessible wi-fi and space to sit down with your laptop and get some work done.
+      p If you've been and you like it or if you don't, anyway please leave a review to help other people just like you.
 
             
