primary color for features

--- a/app_server/views/includes/location-info-item/benefits.pug
+++ b/app_server/views/includes/location-info-item/benefits.pug
@@ -14,13 +14,13 @@ p.address 125 High Street, Reading, RG6 1PS
 .card.mb-2
   .card-header Facilities
   .card-body
-    span.badge.badge-secondary.mr-2.mb-1
+    span.badge.badge-primary.mr-2.mb-1
       i.fas.fa-check.mr-1
       | Hot drinks
-    span.badge.badge-secondary.mr-2.mb-1
+    span.badge.badge-primary.mr-2.mb-1
       i.fas.fa-check.mr-1
       | Food
-    span.badge.badge-secondary.mr-2.mb-1
+    span.badge.badge-primary.mr-2.mb-1
       i.fas.fa-check.mr-1
       | Premium Wi-Fi
 
