--- a/app_server/views/location-info.pug
+++ b/app_server/views/location-info.pug
@@ -6,7 +6,7 @@ block content
       h1 Starcups
   .row
     .col-12.col-md-9
-      .row
+      .row.mb-3
         .col-12.col-sm-6
           include includes/location-info-item/benefits
         .col-12.col-sm-6.location-map
