--- a/app_server/views/includes/locations-list-group-item.pug
+++ b/app_server/views/includes/locations-list-group-item.pug
@@ -9,6 +9,6 @@ h4
   span.badge.float-right.badge-info 100m
 p.address 125 High Street, Reading, RG6 1PS
 p
-  span.badge.badge-secondary.mr-1 Hot drinks
-  span.badge.badge-secondary.mr-1 Food
-  span.badge.badge-secondary.mr-1 Premium Wi-Fi
+  span.badge.badge-primary.mr-1 Hot drinks
+  span.badge.badge-primary.mr-1 Food
+  span.badge.badge-primary.mr-1 Premium Wi-Fi
