--- a/app_server/views/includes/locations-list-group-item.pug
+++ b/app_server/views/includes/locations-list-group-item.pug
@@ -1,14 +1,13 @@
 h4
-  a.mr-2(href="/location/") Starcups
+  a.mr-2(href="/location/")= location.name
   small
-    i.fas.fa-star
-    i.fas.fa-star
-    i.fas.fa-star
-    i.far.fa-star
-    i.far.fa-star
-  span.badge.float-right.badge-info 100m
-p.address 125 High Street, Reading, RG6 1PS
+    - for(var i = 1; i <= location.rating; i++)
+      i.fas.fa-star
+    - var maxStars = 5
+    - for(var i = location.rating; i < maxStars; i++)
+      i.far.fa-star
+  span.badge.float-right.badge-info= location.distance
+p.address= location.address
 p
-  span.badge.badge-primary.mr-1 Hot drinks
-  span.badge.badge-primary.mr-1 Food
-  span.badge.badge-primary.mr-1 Premium Wi-Fi
+  each facility in location.facilities
+    span.badge.badge-primary.mr-1= facility
