includes paths changed to absolute

--- a/app_server/views/includes/location-info-item/reviews-group.pug
+++ b/app_server/views/includes/location-info-item/reviews-group.pug
@@ -3,7 +3,7 @@
     a.btn.btn-primary.float-right(href="/location/review/new") Add review
     h2.card-title Customer reviews
   .card-body
-    include review-item
-    include review-item
-    include review-item
+    include /includes/location-info-item/review-item
+    include /includes/location-info-item/review-item
+    include /includes/location-info-item/review-item
       
