--- a/app_server/views/locations-list.pug
+++ b/app_server/views/locations-list.pug
@@ -14,4 +14,4 @@ block content
           .col-12.list-group-item
             include /includes/locations-list-group-item
     .col-12.col-lg-4
-      p.lead Loc8r helps you find places to work when out and about. Perhaps with coffee, cake or a pint? Let Loc8r help you find the place you're looking for.
+      p.lead= sidebar
