--- a/app_server/views/location-info.pug
+++ b/app_server/views/location-info.pug
@@ -3,7 +3,7 @@ extends layout
 block content
   .row.page-header
     .col-12
-      h1 Starcups
+      h1= pageHeader.title
   .row
     .col-12.col-md-9
       .row.mb-3
@@ -15,7 +15,7 @@ block content
         .col-12
           include /includes/location-info-item/reviews-group
     .col-12.col-md-3
-      p.lead Simon's cafe is on Loc8r! There are accessible wi-fi and space to sit down with your laptop and get some work done.
-      p If you've been and you like it or if you don't, anyway please leave a review to help other people just like you.
+      p.lead #{location.name} #{sidebar.context}
+      p #{location.callToAction}
 
             
