--- a/app_server/views/includes/location-info-item/map.pug
+++ b/app_server/views/includes/location-info-item/map.pug
@@ -1,4 +1,4 @@
 .card.mb-2
   .card-header Location map
   .card-body
-    img.img-fluid.rounded(src="http://maps.googleapis.com/maps/api/staticmap?center=51.455041,-0.9690884&zoom=17&size=400x350&sensor=false&markers=51.455041,-0.9690884&scale=2")
+    img.img-fluid.rounded(src=`http://maps.googleapis.com/maps/api/staticmap?center=${location.coords.lat},${location.coords.lng}&zoom=17&size=400x350&sensor=false&markers=${location.coords.lat},${location.coords.lng}&scale=2`)
