--- a/app_server/views/generic-text.pug
+++ b/app_server/views/generic-text.pug
@@ -7,5 +7,4 @@ block content
         h1= title
     .row
       .col-12.col-md-6
-        p Loc8r was created to help people find places to sit down and get a bit of work done.
-        p Lorem21
+        p !{content.replace(/&/g, '&amp;').replace(/</g, '&lt;').replace(/>/g, '&gt;').replace(/\n/g, '<br/>')}
