--- a/app_server/views/layout.pug
+++ b/app_server/views/layout.pug
@@ -5,7 +5,9 @@ html
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title= title
     link(rel="shortcut icon", href="/favicon.png", type="image/png")
+    link(rel="stylesheet", href="https://fonts.googleapis.com/css?family=Open+Sans|Ubuntu")
     link(rel="stylesheet", href="/bootstrap/css/bootstrap.min.css")
+    link(rel="stylesheet", href="/bootstrap/css/bootstrap4-pleasant.min.css")
     link(rel="stylesheet", href="/stylesheets/fontawesome-all.min.css")
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
