--- a/app_server/views/layout.pug
+++ b/app_server/views/layout.pug
@@ -12,17 +12,18 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     nav.navbar.fixed-top.navbar-expand-lg.navbar-light.bg-light
-      a.navbar-brand(href='/')
-        img.d-inline-block.align-top(src='/favicon.png', width='30', height='30', alt='')
-        |  Loc8r
-      button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarSupportedContent', aria-controls='navbarSupportedContent', aria-expanded='false', aria-label='Toggle navigation')
-        span.navbar-toggler-icon
-      #navbarSupportedContent.collapse.navbar-collapse
-        ul.navbar-nav.mr-auto
-          li.nav-item.active
-            a.nav-link(href='/about/')
-              | About 
-              span.sr-only (current)
+      .container
+        a.navbar-brand(href='/')
+          img.d-inline-block.align-top(src='/favicon.png', width='30', height='30', alt='')
+          |  Loc8r
+        button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarSupportedContent', aria-controls='navbarSupportedContent', aria-expanded='false', aria-label='Toggle navigation')
+          span.navbar-toggler-icon
+        #navbarSupportedContent.collapse.navbar-collapse
+          ul.navbar-nav.mr-auto
+            li.nav-item.active
+              a.nav-link(href='/about/')
+                | About 
+                span.sr-only (current)
     .container
       block content
       footer
