facility color info w/ light text

--- a/app_server/views/mixins/facility.pug
+++ b/app_server/views/mixins/facility.pug
@@ -1,5 +1,5 @@
 mixin facility(text, check)
-  span.badge.badge-primary.badge-pill.mr-2.mb-1
+  span.badge.badge-warning.text-light.badge-pill.mr-2.mb-1
     if check
       i.fas.fa-check.mr-1
     | #{text}
