removed action class from review item

--- a/app_server/views/includes/location-info-item/review-item.pug
+++ b/app_server/views/includes/location-info-item/review-item.pug
@@ -1,6 +1,6 @@
 include /mixins/rating
 
-.review.list-group-item.list-group-item-action.flex-column-align-items-start
+.review.list-group-item.flex-column-align-items-start
   .d-flex.w-100.justify-content-between
     h5.mb-1= review.author
     small.rating
